libaffix/src/snapshots/libaffix__tests__PARSE_SNAPSHOT__ambiguous4.snap
---
source: libaffix/src/lib.rs
expression: parse_res
---
{
  "Ok": {
    "data_decls": [],
    "rule_decls": [
      {
        "signature": {
          "name": "man",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "man"
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "mangrove",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "mangrove"
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "start",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "RuleRef": {
                    "rule": "m",
                    "args": []
                  }
                }
              ]
            ]
          }
        ]
      }
    ]
  }
}
