libaffix/src/snapshots/libaffix__tests__PARSE_SNAPSHOT__find-unreachable.snap
---
source: libaffix/src/lib.rs
expression: parse_res
---
{
  "Ok": {
    "data_decls": [],
    "rule_decls": [
      {
        "signature": {
          "name": "start",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "yo"
                },
                {
                  "DataVariant": "dawg"
                }
              ]
            ]
          }
        ]
      }
    ]
  }
}
